tests/neg/lists/list-04.ts
/*@ hop :: <M extends ReadOnly> (LList<M,{v:number| 0 < v}>) => List<M,{v:number| 10 < v}> */
function hop(xs){
  return xs;
}

